other/remove-serviceaccount-token/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: remove-serviceaccount-token
policies:
- ../remove-serviceaccount-token.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: remove-serviceaccount-token
  resources:
  - busybox
  result: pass
  rule: remove-vol-volmount
